--- a/p-algoritmos-clase03/nbproject/project.properties
+++ b/p-algoritmos-clase03/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=p.algoritmos.clase03.PAlgoritmosClase03
+main.class=p.algoritmos.clase03.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
